Sat Nov 14 08:40:32 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_vm_mark, vm_memsize): ignore other VM.

	* vm.c (rb_vm_initialize): add last NULL.

Sat Nov 14 03:49:07 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (native_thread_init_stack): fixed stack star
	  address.

Fri Nov 13 19:56:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* mvm.c (vm_join): does nothing when vm has died.

	* vm.c (rb_vm_free): notify to waiting vm.

	* vm.c (vm_create): global_vm_lock is already locked.

Fri Nov 13 16:28:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (ruby_native_thread_create): start new thread with
	  rb_thread_t.  split from thread_create_core.

	* vm.c (rb_vm_start, rb_vm_join): new methods, #start and #join.

	* vm.c (vm_make_main_thread): make bare main thread.  split from
	  ruby_make_bare_vm.

Fri Nov 13 16:22:00 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (thread_start_func_2): see first_func, not first_proc,
	  to decide which to use.

	* gc.c (vm_xrealloc): use the given object space.

Fri Nov 13 10:14:11 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (ruby_vm_cleanup): not destruct vm, nor re-send signal.

	* eval.c (ruby_cleanup): destruct current vm and re-send signal.

	* parse.y (Init_sym): use separate object space.

Thu Nov 12 16:35:42 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (ruby_vm_run): cleanup needed.

	* vm.c (thread_recycle_stack, rb_thread_recycle_stack_release):
	  stack belongs to no object space.

Thu Nov 12 14:33:21 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_win32.c (thread_errno): CreateThread does not set errno.

	* thread.c (thread_create_core): moved failure handling from
	  native_thread_core().

	* thread_pthread.c (native_thread_create): constified.

Thu Nov 12 10:08:56 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* .document: remove documents not in rdoc format until
	  rdoc supports non rdoc files. [ruby-core:26459]
